--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -14,6 +14,10 @@
         <% end %>
     </div>
     <div>
+      <%= form.label :status %><br>
+      <%= form.select :status, Visible::VALID_STATUSES, selected: article.status || 'public' %><br>
+    </div>
+    <div>
         <%= form.submit %>
     </div>
 <% end %>
