--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -3,5 +3,12 @@
     <strong><%= comment.commenter %></strong>:
     <%= comment.body %>
   </p>
+  <p>
+    <%= link_to "Destroy comment", [comment.article, comment], data: {
+      turbo_method: :delete,
+      turbo_confirm: "Are you sure?"
+    } %>
+  </p>
+
 <% end %>
 
