--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -8,6 +8,10 @@
         <%= form.text_area :body %>
     </div>
     <div>
+      <%= form.label :status %><br>
+      <%= form.select :status, Visible::VALID_STATUSES, selected: article.status %><br>
+    </div>
+    <div>
         <%= form.submit %>
     </div>
 <% end %>
