Install and experiment with tailwind for css

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -4,6 +4,7 @@
 
 <ul>
   <li><%= link_to "Edit", edit_article_path(@article) %></li>
+  <%= button_to "Edit", action: false %>
   <li><%= link_to "Destroy", article_path(@article), data: {
     turbo_method: :delete,
     turbo_confirm: "Are you sure?"
