--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,16 +1,23 @@
-<h1>Articles</h1>
-
+<p class="text-2xl">Articles</p>
 This blog has <%= Article.public_count %> articles and counting!
 <br>
 
-<ul>
+<table class="border-collapse border border-slate-500">
+  <thead>
+    <tr>
+      <th class="border border-slate-600">Title</th>
+      <th class="border border-slate-600">Published</th>
+    </tr>
+  </thead>
+
+  <tbody>
     <% @articles.each do |article| %>
-      <% unless article.archived? %>
-        <li>
-            <%= link_to article.title, article %>
-        </li>
+      <tr>
+        <td class="border border-slate-700"><%= link_to article.title, article %></td>
+        <td class="border border-slate-700"><%= article.created_at %></td>
+      </tr>
     <% end %>
-  <% end %>
-</ul>
+  </tbody>
+</table>
 
 <%= link_to "New Article", new_article_path %>
