Update views welcome page, flash notice partial, navbar edit, and new user signup view

--- a/app/views/home/welcome.html.erb
+++ b/app/views/home/welcome.html.erb
@@ -3,6 +3,6 @@
 </ul>
 
 <ul>
-  <li><a href="#">Sign up</a></li>
+  <li><a href="sign_up">Sign up</a></li>
   <li><a href="#">Sign in</a></li>
 </ul>
