--- a/app/views/home/welcome.html.erb
+++ b/app/views/home/welcome.html.erb
@@ -4,5 +4,5 @@
 
 <ul>
   <li><a href="sign_up">Sign up</a></li>
-  <li><a href="#">Sign in</a></li>
+  <li><%= link_to "Login", login_path %></li>
 </ul>
