--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,9 @@
   <body>
     <%= render "layouts/navbar" %> 
     <%= render "layouts/flashes" %> 
+    <div class='flex'>
     <%= yield %>
+    <%= render "layouts/sidebar" %> 
+    </div>
   </body>
 </html>
