--- a/app/views/home/welcome.html.erb
+++ b/app/views/home/welcome.html.erb
@@ -3,6 +3,6 @@
 </ul>
 
 <ul>
-  <li><a href="sign_up">Sign up</a></li>
+  <li><%= link_to "Sign up", sign_up_path %></li>
   <li><%= link_to "Login", login_path %></li>
 </ul>
