--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,10 +1,10 @@
 <h1><%= @article.title %></h1>
 
-<p><%= @article.body %></p>
+<p><%= markdown(@article.body) %></p>
 
 <ul>
   <li><%= link_to "Edit", edit_article_path(@article) %></li>
-  <%= button_to "Edit", action: false %>
+  <%# <%= button_to "Edit", action: false %> %>
   <li><%= link_to "Destroy", article_path(@article), data: {
     turbo_method: :delete,
     turbo_confirm: "Are you sure?"
