--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-    <%= stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload" %>
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
@@ -22,7 +21,7 @@
   </head>
 
   <body>
-    <%= render "layouts/navbar" %> 
+    <%# render "layouts/navbar" %> 
     <%= render "layouts/flashes" %> 
     <%= yield %>
     </div>
