--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,161 @@
  *= require_tree .
  *= require_self
  */
+
+.navbar {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  background-color: rgb(223 227 235);
+  margin: 0px;
+  border-radius: 8px;
+  /* padding: 20px 20px; */
+
+
+  & .title {
+    font-size: 1.8rem;
+  }
+
+  & .left {
+    width: 500px;
+  display: flex;
+  flex-direction: row;
+    font-size: 1.2rem;
+  align-items: center;
+    & .logo {
+      height: 90px;
+    }
+  }
+
+  & .right {
+    font-size: 1.2rem;
+  align-items: center;
+    /* background-color: black; */
+  }
+}
+
+.nav-button, .action-button {
+  /* border: 1px solid; */
+  /* border-color: rgb(250 250 250); */
+  background-color: rgb(72, 184, 129);
+  margin: 15px 10px;
+  padding: 10px;
+  border-radius: 5px;
+  text-decoration: none;
+  color: white;
+}
+
+.article {
+  max-width: 700px;
+  margin: 20px auto;
+  padding: 10px;
+  border: 1px solid;
+  border-color: rgb(230 230 230);
+  border-radius: 8px;
+
+  & .title {
+    display: flex;
+    height: 70px;
+    /* margin: 1px; */
+    padding: 0px 20px;
+    border: 1px solid;
+    border-color: rgb(230 230 230);
+    border-radius: 5px;
+    align-items: center;
+    justify-content: space-between;
+
+    & .date {
+      color: rgb(110 110 110);
+    }
+  }
+
+  & .author {
+    color: rgb(110 110 110);
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    height: 25px;
+    margin-right: 60px;
+
+   & .tab {
+      border-bottom: 1px solid;
+      border-right: 1px solid;
+      border-left: 1px solid;
+      border-color: rgb(230 230 230);
+      min-width: 60px;
+      padding-left: 20px;
+      padding-right: 20px;
+      border-bottom-left-radius: 5px;
+      border-bottom-right-radius: 5px;
+    }
+  }
+
+  & .image {
+    width: 660px;
+  }
+   }
+
+
+  & .body {
+    padding: 0px 20px;
+    font-size: 1.1em;
+    min-height: 400px;
+  }
+
+  /* & .comments {
+  } */
+
+  .article-text-area {
+    resize: none;
+  }
+
+  & .buttons {
+    padding-left: 10px;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+
+    & .button {
+      margin-right: 20px;
+      display: flex;
+      background-color: yellow;
+      /* align-items: center; */
+      text-align: center;
+      border: 1px solid;
+      border-color: rgb(230 230 230);
+      border-radius: 5px;
+    }
+  }
+
+  .article-index {
+    max-width: 700px;
+    margin: 20px auto;
+    padding: 10px;
+    border: 1px solid;
+    border-color: rgb(230 230 230);
+    border-radius: 8px;
+
+    & .index-box {
+      width: 652px;
+      display: flex;
+      height: 50px;
+      margin-bottom: 8px;
+      padding: 0px 20px;
+      border: 1px solid;
+      border-color: rgb(230 230 230);
+      border-radius: 5px;
+      align-items: center;
+      justify-content: space-between;
+
+      & .title {
+        text-decoration: none;
+        color: black;
+      }
+
+      & .date {
+        color: rgb(110 110 110);
+      }
+    }
+  }
