--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,14 +1,13 @@
 <%= form_with model: article do |form| %>
-    <div>
-        <%= form.label :title %>
+  <div class="article">
+    <div class="title">
         <%= form.text_field :title %>
         <% article.errors.full_messages_for(:title).each do |message| %>
             <div><%= message %></div>
         <% end %>
     </div>
     <div>
-        <%= form.label :body %>
-        <%= form.text_area :body %>
+        <%= form.text_area :body, class: "article-text-area", rows: 15, cols: 88; %>
         <% article.errors.full_messages_for(:body).each do |message| %>
             <div><%= message %></div>
         <% end %>
@@ -20,4 +19,5 @@
     <div>
         <%= form.submit %>
     </div>
+  </div>
 <% end %>
