--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,22 +1,16 @@
-<p class="text-2xl">Articles</p>
-<br>
-
-<table class="border-collapse border border-slate-500">
-  <thead>
-    <tr>
-      <th class="border border-slate-600">Title</th>
-      <th class="border border-slate-600">Published</th>
-    </tr>
-  </thead>
-
+<div class="article-index">
+<table>
   <tbody>
     <% @articles.each do |article| %>
-      <tr>
-        <td class="border border-slate-700"><%= link_to article.title, article %></td>
-        <td class="border border-slate-700"><%= article.created_at %></td>
+      <tr class="index-box">
+        <td><h4><%= link_to article.title, article, class: "title" %></h4></td>
+        <td class="date"><%= article.created_at.to_date %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
+<div>
+<%= link_to "New Article", new_article_path, class: "action-button" %>
+</div>
+</div>
 
-<%= link_to "New Article", new_article_path %>
