--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,23 +1,23 @@
-<div class="flex justify-between items-center bg-blue-500 p-4">
+<div class="navbar">
   
-  <!-- Left side: Logo and Text -->
-  <div class="flex items-center space-x-4">
-    <%= image_tag 'navbar_logo.png', alt: 'Logo', class: 'h-8 w-8' %>
-    <span class="text-white font-semibold text-lg">Iaan's Blog</span>
-    <%= link_to "Articles", articles_path%>
-    <%= link_to "Linkedin", "https://www.linkedin.com/in/iaanjohnston/" %>
+  <div class="left">
+  <div>
+  </div>
+    <%= image_tag "navbar_logo.png", alt: "Logo", class: "logo" %>
+    <span class="title">Tired Legs</span>
+    <%= link_to "Articles", articles_path, class: "nav-button"%>
+    <%= link_to "Linkedin", "https://www.linkedin.com/in/iaanjohnston/", class: "nav-button"%>
   </div>
   
-  <!-- Right side: Links -->
-  <div class="flex space-x-6">
+  <div class="right">
     <% if user_signed_in? %>
       <a>
         Welcome, <%= current_user.email %>
       </a>
-      <%= link_to "Logout", logout_path, data: { turbo_method: :delete } %>
+      <%= link_to "Logout", logout_path, data: { turbo_method: :delete }, class: "nav-button" %>
     <% else %>
-      <%= link_to "Sign up", sign_up_path %>
-      <%= link_to "Login", login_path %>
+      <%= link_to "Sign up", sign_up_path, class: "nav-button" %>
+      <%= link_to "Login", login_path, class: "nav-button" %>
     <% end %>
 
 
