--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: article do |form| %>
+<%= form_with(model: article, local: true, multipart: true) do |form| %>
   <div class="article">
     <div class="title">
         <%= form.text_field :title %>
@@ -11,6 +11,10 @@
         <% article.errors.full_messages_for(:body).each do |message| %>
             <div><%= message %></div>
         <% end %>
+    </div>
+    <div>
+      <%= form.label :image, "Upload article image" %>
+      <%= form.file_field :image %>
     </div>
     <div>
       <%= form.label :status %><br>
