--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -47,6 +47,39 @@
   }
 }
 
+/* Tooltip container */
+.disabled-tooltip {
+  position: relative;
+  display: inline-block;
+  pointer-events: none; /* Disable any interaction */
+  color: grey;          /* Style for the disabled span */
+  cursor: not-allowed;
+}
+
+/* Tooltip text */
+.disabled-tooltip::after {
+  content: "This action is disabled"; /* The message you want to show */
+  visibility: hidden;
+  width: 160px;
+  background-color: black;
+  color: white;
+  text-align: center;
+  border-radius: 5px;
+  padding: 5px;
+  position: absolute;
+  bottom: 125%; /* Position above the span */
+  left: 50%;
+  margin-left: -80px; /* Half of the width to center it */
+  opacity: 0;
+  transition: opacity 0.3s;
+  z-index: 1;
+}
+
+/* Show the tooltip on hover */
+.disabled-tooltip:hover::after {
+  visibility: visible;
+  opacity: 1;
+}
 .nav-button, .action-button {
   /* border: 1px solid; */
   /* border-color: rgb(250 250 250); */
