--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -3,13 +3,17 @@
   <tbody>
     <% @articles.each do |article| %>
       <tr class="index-box">
-        <td><h4><%= link_to article.title, article, class: "title" %></h4></td>
-        <td class="date"><%= article.created_at.to_date %></td>
+          <% if (current_user == article.user) %>
+            <td><h4><%= link_to article.title, article, class: "title" %></h4></td>
+          <% else %>
+            <td><h4><%= content_tag :span, article.title, class: "disabled-tooltip" %></h4></td>
+          <% end %>
+        <td class="date">(<%= article.status %>) <%= article.created_at.to_date %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
-<div>
+<div class="buttons button">
 <%= link_to "New Article", new_article_path, class: "action-button" %>
 </div>
 </div>
