--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -3,7 +3,7 @@
   <tbody>
     <% @articles.each do |article| %>
       <tr class="index-box">
-          <% if (current_user == article.user) %>
+          <% if article.current_user_is_author?(current_user) %>
             <td><h4><%= link_to article.title, article, class: "title" %></h4></td>
           <% else %>
             <td><h4><%= content_tag :span, article.title, class: "disabled-tooltip" %></h4></td>
