Style changes & add hover tooltip for blocked article links

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,6 +1,8 @@
 <div class="article">
-  <div class="title">
-    <h1><%= @article.title %></h1>
+  <div class="title-box">
+    <div class="title-container">
+      <h1 class="title"><%= @article.title %></h1>
+    </div>
     <div class="date">
       <%= @article.created_at.to_date %>
     </div>
