--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -36,7 +36,7 @@
     font-size: 1.2rem;
   align-items: center;
     & .logo {
-      height: 90px;
+      height: 70px;
     }
   }
 
@@ -47,42 +47,7 @@
   }
 }
 
-/* Tooltip container */
-.disabled-tooltip {
-  position: relative;
-  display: inline-block;
-  pointer-events: none; /* Disable any interaction */
-  color: grey;          /* Style for the disabled span */
-  cursor: not-allowed;
-}
-
-/* Tooltip text */
-.disabled-tooltip::after {
-  content: "This action is disabled"; /* The message you want to show */
-  visibility: hidden;
-  width: 160px;
-  background-color: black;
-  color: white;
-  text-align: center;
-  border-radius: 5px;
-  padding: 5px;
-  position: absolute;
-  bottom: 125%; /* Position above the span */
-  left: 50%;
-  margin-left: -80px; /* Half of the width to center it */
-  opacity: 0;
-  transition: opacity 0.3s;
-  z-index: 1;
-}
-
-/* Show the tooltip on hover */
-.disabled-tooltip:hover::after {
-  visibility: visible;
-  opacity: 1;
-}
 .nav-button, .action-button {
-  /* border: 1px solid; */
-  /* border-color: rgb(250 250 250); */
   background-color: rgb(72, 184, 129);
   margin: 15px 10px;
   padding: 10px;
@@ -99,9 +64,9 @@
   border-color: rgb(230 230 230);
   border-radius: 8px;
 
-  & .title {
+  & .title-box {
     display: flex;
-    height: 70px;
+    min-height: 70px;
     /* margin: 1px; */
     padding: 0px 20px;
     border: 1px solid;
@@ -109,10 +74,28 @@
     border-radius: 5px;
     align-items: center;
     justify-content: space-between;
+  }
 
-    & .date {
-      color: rgb(110 110 110);
-    }
+  & .title-container {
+    display: flex;
+    align-items: center;
+    /* overflow: a; */
+    max-width: 500px;
+  }
+
+  & .title {
+    color: black;
+    text-decoration: none;
+    /* white-space: nowrap; */
+    /* overflow: hidden; */
+    text-overflow: ellipsis;
+    display: inline-block;
+    max-width: 100%;
+  }
+
+  & .date {
+    font-size: medium;
+    color: rgb(110 110 110);
   }
 
   & .author {
@@ -145,9 +128,8 @@
 
   & .image {
     width: 100%;
-    padding: 0px 20px;
+    padding: 0px 10px;
   }
-   }
 
 
   & .body {
@@ -173,42 +155,97 @@
     & .button {
       margin-right: 20px;
       display: flex;
-      background-color: yellow;
-      /* align-items: center; */
       text-align: center;
       border: 1px solid;
       border-color: rgb(230 230 230);
       border-radius: 5px;
     }
   }
+}
 
-  .article-index {
-    max-width: 700px;
-    margin: 20px auto;
-    padding: 10px;
+.article-index {
+  max-width: 700px;
+  margin: 20px auto;
+  padding: 10px 10px;
+  border: 1px solid;
+  border-color: rgb(230 230 230);
+  border-radius: 8px;
+
+  & .index-box {
+    width: 100%;
+    box-sizing: border-box;
+    display: flex;
+    margin-bottom: 12px;
+    padding: 0px 20px;
     border: 1px solid;
     border-color: rgb(230 230 230);
-    border-radius: 8px;
-
-    & .index-box {
-      width: 652px;
-      display: flex;
-      height: 50px;
-      margin-bottom: 8px;
-      padding: 0px 20px;
-      border: 1px solid;
-      border-color: rgb(230 230 230);
-      border-radius: 5px;
-      align-items: center;
-      justify-content: space-between;
-
-      & .title {
-        text-decoration: none;
-        color: black;
-      }
-
-      & .date {
-        color: rgb(110 110 110);
-      }
-    }
+    border-radius: 5px;
+    align-items: center;
+    justify-content: space-between;
   }
+
+  .index-box:hover {
+    background-color: rgb(250 250 250);
+  }
+
+  & .title-container {
+    overflow: hidden;
+    max-width: 400px;
+  }
+
+  .tooltip-container {
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
+
+  
+  .tooltip-text {
+    visibility: hidden;
+    background-color: rgb(200 200 200);
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 3px 10px;
+    margin-left: 10px;
+    /* position: absolute; */
+    /* z-index: 1; */
+    /* bottom: -20%; */
+    /* left: 50%; */
+    /* margin-left: -60px; */
+  }
+
+  .tooltip-container:hover .tooltip-text {
+    visibility: visible;
+  }
+
+  .title:hover {
+    text-decoration: underline;
+  }
+  
+  & .title {
+    color: black;
+    text-decoration: none;
+    white-space: nowrap; /* Prevent text from wrapping */
+    overflow: hidden; /* Hide text that overflows */
+    text-overflow: ellipsis; /* Show ellipsis when text overflows */
+    display: inline-block;
+    max-width: 100%; /* Ensure the title doesn't go beyond container */
+  }
+
+  & .no-access {
+    color: rgb(110 110 110);
+  }
+
+  & .no-access:hover {
+    cursor: not-allowed;
+  }
+  
+  & .date {
+    color: rgb(110 110 110);
+    margin-left: 10px;
+    white-space: nowrap; /* Prevent date from wrapping */
+  }
+  
+}
