--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,20 +1,21 @@
 <div class="article-index">
-<table>
-  <tbody>
-    <% @articles.each do |article| %>
-      <tr class="index-box">
-          <% if article.current_user_is_author?(current_user) %>
-            <td><h4><%= link_to article.title, article, class: "title" %></h4></td>
-          <% else %>
-            <td><h4><%= content_tag :span, article.title, class: "disabled-tooltip" %></h4></td>
-          <% end %>
-        <td class="date">(<%= article.status %>) <%= article.created_at.to_date %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-<div class="buttons button">
-<%= link_to "New Article", new_article_path, class: "action-button" %>
-</div>
-</div>
+  <% @articles.each do |article| %>
+    <div class="index-box">
+      <% if article.current_user_is_author?(current_user) %>
+        <h4 class="title-container">
+          <%= link_to article.title, article, class: "title" %>
+        </h4>
+      <% else %>
+        <h4 class="tooltip-container">
+        <div class="no-access"><%= article.title %></div>
+            <%= content_tag :div, "Log in to view", class: "tooltip-text"%>
+        </h4>
+      <% end %>
+      <div class="date"><%= article.created_at.to_date %></div>
+    </div>
+  <% end %>
 
+  <div class="buttons">
+    <%= link_to "New Article", new_article_path, class: "action-button new-article" %>
+  </div>
+</div>
