--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,7 +1,7 @@
 <div class="article">
   <div class="title-box">
     <div class="title-container">
-      <h1 class="title"><%= @article.title %></h1>
+      <h2 class="title"><%= @article.title %></h2>
     </div>
     <div class="date">
       <%= @article.created_at.to_date %>
@@ -16,7 +16,9 @@
     <%= image_tag url_for(@article.image), class: "image" unless !@article.image.present? %>
   </div>
 
-  status: <%= @article.status %>
+  <div class="grey-note">
+    Status: <%= @article.status %><br>
+  </div>
 
   <% if user_signed_in? && current_user = @article.user %>
     <div class="buttons">
@@ -31,9 +33,8 @@
       %>
       </div>
     </div>
-  <% else %>
-      Sign in to do stuff
   <% end %>
+
 
   
 
