--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -40,7 +40,7 @@
 <% end %>
 
 
-  <div class="buttons">
+  <div class="add-article-button">
     <%= link_to "New Article", new_article_path, class: "action-button new-article" %>
   </div>
 </div>
